[package]
name = "enxerto"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Pleme Team <team@pleme.io>"]
description = "enxerto — pleme-io mesh sidecar-injector. MutatingAdmissionWebhook that grafts the aresta proxy + iptables init-container onto Pods labeled for mesh injection."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pleme-io/enxerto"
readme = "README.md"
keywords = ["service-mesh", "spiffe", "kubernetes", "admission-webhook", "sidecar"]
categories = ["network-programming"]

[lib]
name = "enxerto"
path = "src/lib.rs"

[[bin]]
name = "enxerto"
path = "src/main.rs"

[dependencies]
# HTTP server.
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.50", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Kubernetes admission types.
k8s-openapi = { version = "0.24", features = ["v1_31"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
base64 = "0.22"
sha2 = "0.10"

# Config + CLI.
clap = { version = "4.5", features = ["derive", "env"] }

# Observability.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Errors.
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1.50", features = ["full", "test-util"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
